make browser specific scss stylesheets a bit more organized

--- a/css/scss/_root.scss
+++ b/css/scss/_root.scss
@@ -1,19 +1,16 @@
 html {
-	&.ie10{
-		@import "browsers/ie10";
-	}
-	&.ie9{
-		@import "browsers/ie9";
-	}
-	&.ie8{
-		@import "browsers/ie8";
-	}
-	&.ie7{
-		@import "browsers/ie7";
-	}
+	@import "_browsers";
 }
 
 body{
+    
+    .wrapper{
+        padding: 0 8px;
+        width: 100%;
+        max-width: $tab-port;
+        margin: 0 auto;
+        @include box-sizing(border-box);
+    }
 
 	header{
 		@import "_header";
