--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="{{ agent:is_ie eq='10' }} ie10{{ /agent:is_ie }}{{ agent:is_ie eq='9' }} ie9{{ /agent:is_ie }}{{ agent:is_ie eq='8' }} ie8{{ /agent:is_ie }}{{ agent:is_ie eq='7' }} ie7{{ /agent:is_ie }}" lang="en">
+<html class="{{ agent:ua_class }}" lang="en">
 	<head>
 		{{ theme:partial name="metadata" }}
 	</head>
